# crankTUI

./: .gitignore  README.md  cranktui-roadmap.md  pyproject.toml
cranktui/: __init__.py  app.py  config.py  elevation_chart.py
cranktui/ble/: __init__.py  client.py  ftms_parser.py  scanner.py
cranktui/recorder/: __init__.py  ghost_loader.py  ride_logger.py
cranktui/routes/: __init__.py  resample.py  route.py  route_loader.py
cranktui/screens/: __init__.py  devices.py  riding.py  route_select.py  settings.py
cranktui/simulation/: physics.py  simulator.py
cranktui/state/: state.py
cranktui/widgets/: __init__.py  elevation_chart.py  minimap.py  stats_panel.py
