[project]
name = "cranktui"
version = "0.1.0"
description = "Terminal UI for Wahoo KICKR bike trainer control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "bleak>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
cranktui = "cranktui.app:main"
